# led_matrix_daemon

./: .gitignore  Cargo.toml  PKGBUILD  README.md  clippy.toml  flake.nix  led_matrix_daemon.service  led_matrix_daemon.socket  rust-toolchain.toml
src/: init.rs  main.rs
src/api/: base64.rs  error.rs  files.rs  mod.rs  render_task.rs
src/cli/: cmd_args.rs  mod.rs
src/config/: led_matrix_config.rs  lef_matrix_config_dto.rs  mod.rs  port_dto.rs
src/hw/: device_version.rs  mod.rs  port.rs  renderer.rs  sync_impl.rs
src/hw_abstract/: bla.rs  led_matrix.rs  mod.rs
test_data/: config.toml  curl_test_b64.sh  curl_test_b64_multiple.sh  curl_test_file.sh
