[package]
name = "led_matrix_daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
image = "0.25"
clap = { version = "4.5", features = ["derive"] }
serialport = "4.3"
anyhow = "1"

serde = { version = "1", features = ["default", "derive", "rc"] }
serde_with = "3.8"
toml = "0.8"

humantime = { version = "2" }
humantime-serde = "1.1"
chrono = { version = "0.4", features = ["default", "serde"] }
chrono-tz = { version = "0.9", features = ["default", "serde"] }

rocket = "0.5"
tokio = { version = "1", features = ["full"] }
