[package]
name = "led_matrix_daemon"
version = "0.2.2"
edition = "2021"

[dependencies]
image = "0.25"
clap = { version = "4.5", features = ["derive"] }
serialport = "4.3"
anyhow = "1"
thiserror = "2"

serde = { version = "1", features = ["default", "derive", "rc"] }
serde_json = "1"
serde_with = { version = "3.8", features = ["base64"] }
toml = "0.8"

humantime = { version = "2" }
humantime-serde = "1.1"

tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
actix-web = "4"
actix-multipart = "0.7"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "json"] }
console-subscriber = { version = "0.4", features = ["env-filter"] }
atty = { version = "0.2", features = [] }

kanal = "0.1.0-pre8"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
